react & mobx & typescript

--- a/React/02. React -  JSX 和 React 组件.md
+++ b/React/02. React -  JSX 和 React 组件.md
@@ -93,7 +93,7 @@ ReactDOM.render(<MyComponent/>,document.getElementById('root'))
 
 ## React 创建组件
 
-- React的函数名以大写字母开头
+- React 的函数名以大写字母开头
 - 元素必须用 div 标签或者幽灵节点（<>...</>）包裹，幽灵节点不会被渲染，效率比div更高
 
 
@@ -173,3 +173,30 @@ class TypesOfFood extends React.Component {
   }
 };
 ```
+
+### 函数组件 FunctionComponent
+
+FunctionComponent 简称 FC，FunctionComponent 是一种 React 函数组件，用于定义 UI 组件。它只有一个参数 props，它是组件的属性对象，用于接收父组件传递下来的属性值，实现组件的复用。
+
+```
+import React from "react";
+
+interface IHello {
+    message: String;
+}
+
+// FunctionComponent = FC
+const Hello: React.FC<IHello> = (props: IHello) => {
+    return (
+        <div>{props.message}</div>
+    )
+}
+
+Hello.defaultProps = {
+    message: "default val"
+}
+export default Hello
+```
+
+
+
