--- a/React/03. React - 上下文 this.md
+++ b/React/03. React - 上下文 this.md
@@ -1,7 +1,7 @@
 # React - this
 
 - 类方法通常需要使用 `this` 关键字，以便它可以访问方法中类的属性（例如 `state` 和 `props`）
-- 类里面的标签，组件是没有this的，需要手动绑定到类
+- 类里面的标签，组件是没有`this` ，需要手动绑定到类
 
 
 
@@ -29,5 +29,15 @@ class MyComponent extends React.Component {
     );
   }
 };
+```
+
+
+
+当需要使用到上下文`this`的时候，就需要使用箭头函数，这个是js的问题
+
+```
+()=>{
+
+}
 ```
 
