--- a/React/04. React - props 和 State.md
+++ b/React/04. React - props 和 State.md
@@ -1,14 +1,62 @@
-# React - State
+# React props 和 State
 
-## State
+## Props
+
+### Props 的默认值
+
+通过 XComponent.defaultProps 设置组件 props 默认值，后续可以修改。
+
+```
+class Greeting extends React.Component {
+  render() {
+    return (
+      <h1>Hello, {this.props.name}</h1>
+    );
+  }
+}
+
+// 指定 props 的默认值：
+Greeting.defaultProps = {
+  name: 'Stranger'
+};
+
+```
+
+### Props 的类型检查
+
+React 组件之间，通过 props 对象传递任意数据，通过设置 PropTypes 设置传递的数据类型， 进行类型检查，当数据类型不匹配的时候，会抛出警告。
+
+官方文档：
+
+- [PropTypes类型](https://zh-hans.reactjs.org/docs/typechecking-with-proptypes.html#gatsby-focus-wrapper)
+
+- [如何在 React 中使用 PropTypes](https://www.freecodecamp.org/chinese/news/how-to-use-proptypes-in-react/)
+
+
+
+```
+const Items = (props) => {
+  return <h1>Current Quantity of Items in Cart: {props.quantity}</h1>
+};
+
+// 设置quantity参数是数字类型
+Items.propTypes = {quantity:PropTypes.number.isRequired}
+ 
+class ShoppingCart extends React.Component {
+  constructor(props) {
+    super(props);
+  }
+  render() {
+    return <Items quantity={123}/>
+  }
+};
+```
+
+## State（类组件）
 
 State 状态就是指数据，通过State可以自动更新组件。状态更新是异步的，这意味着 React 可能会把多个 `setState()` 集中在一起批量更新。与props的区别就是 state 是私有的，并且完全受控于当前组件。State 完全是组件私有的。
 
-
-
-### 更新State
-
-#### 初始化 state
+### 初始化 state
 
 写法一
 
@@ -54,11 +102,7 @@ class MyComponent extends React.Component {
 };
 ```
 
-
-
-
-
-#### 更新state数据
+更新state数据
 
 ```
 this.setState({
@@ -66,7 +110,7 @@ this.setState({
 });
 ```
 
-#### 示例
+### 示例：按钮开关
 
 有时候需要更新数据，从State里面获取，不建议这样操作：
 
@@ -136,7 +180,7 @@ class MyComponent extends React.Component {
 }
 ```
 
-#### 计时器
+### 示例：计时器
 
 ```
 class Counter extends React.Component {
