--- a/Mobx/02. Mobx - 使用.md
+++ b/Mobx/02. Mobx - 使用.md
@@ -98,6 +98,8 @@ export default class MyTest extends Component {
 
 ## Mobx 对象监听
 
+observable ：创建可观察到数据对象
+
 写法一：
 
 ```
@@ -226,3 +228,38 @@ function App() {
   //...
 }
 ```
+
+
+
+## Mobx 案例：Counter
+
+- observable：设置数据可以被监听
+- observer：监听
+
+```
+import { observable, action } from 'mobx';
+import { observer } from 'mobx-react';
+
+// 定义一个 observable
+const counter = observable({
+  count: 0
+});
+
+// 定义一个 action 来更新 observable
+const increment = action(() => {
+  counter.count++;
+});
+
+// 使用 observer 包裹组件，并将 observable 引入到组件中
+const Counter = observer(() => {
+  return (
+    <div>
+      <p>Count: {counter.count}</p>
+      <button onClick={increment}>Increment</button>
+    </div>
+  );
+});
+
+export default Counter
+```
+
